Add NavBar component

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
       name="Air Visual"
       content="Web app for Air Quality index"
     />
+    <script
+      src="https://kit.fontawesome.com/0f83e5d3b7.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Air Visual</title>
   </head>
   <body>
